8314061: [JVMCI] DeoptimizeALot stress logic breaks deferred barriers

Reviewed-by: thartmann, dnsimon